fixed alignment issues for tutor list

--- a/src/app/find-tutor/tutor-list/tutor-list.component.scss
+++ b/src/app/find-tutor/tutor-list/tutor-list.component.scss
@@ -19,9 +19,17 @@ table {
   width: 100%;
 }
 
-.grade-description {
+tr {
   width: 100%;
+}
+
+.grade-description {
+  width: 80%;
   text-align: right;
+}
+
+.colon {
+  width: 1%;
 }
 
 /* Formats the entire table that displays a tutor's grades
